Update Multivariate Poisson Particle Filter Demo.ipynb

--- a/Multivariate Poisson Particle Filter Demo.ipynb
+++ b/Multivariate Poisson Particle Filter Demo.ipynb
@@ -9,7 +9,7 @@
    "outputs": [],
    "source": [
     "# import function to simulate multivariate poisson process data\n",
-    "import mvstatespace as mvs\n",
+    "import simulatePLDS as mvs\n",
     "import numpy as np\n",
     "import scipy as sp"
    ]
